--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -1,7 +1,8 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Pengatur Jadwal Trade Program'">
-    <button style="width: 150px" [routerLink]="['/dte','schedule-trade-program', 'create']" mat-raised-button type="button">
+    <button style="width: 150px" [routerLink]="['/dte','schedule-trade-program', 'create']" mat-raised-button
+      type="button">
       <mat-icon>add</mat-icon> BUAT
     </button>
   </page-content-header>
@@ -18,13 +19,15 @@
         </div>
       </div>
       <form [formGroup]="formFilter" autoComplete="off">
-        <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" class="top-table p-8">
-          <mat-form-field fxFlex="25" class="orders dropdown">
+        <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
+          class="top-table p-8">
+          <mat-form-field fxFlex="16" class="orders dropdown">
             <mat-select formControlName="filter">
               <mat-option [value]="item.value" *ngFor="let item of statusFilter">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="25" floatLabel="never" class="orders datepicker is-light">
+          <div fxFlex="1"></div>
+          <mat-form-field fxFlex="16" floatLabel="never" class="orders datepicker is-light">
             <input matInput #from [matDatepicker]="dari" (focus)="dari.open()" placeholder="Dari Tanggal"
               formControlName="start_date" (dateChange)="setMinDate(formFilter.get('start_date').value)" readonly>
             <button mat-button *ngIf="formFilter.get('start_date').value" matSuffix mat-icon-button aria-label="Clear"
@@ -36,9 +39,10 @@
             </mat-datepicker-toggle>
             <mat-datepicker #dari></mat-datepicker>
           </mat-form-field>
-          <mat-form-field fxFlex="25" floatLabel="never" class="orders datepicker is-light">
-            <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate" placeholder="Sampai Tanggal"
-              formControlName="end_date" readonly>
+          <div fxFlex="1"></div>
+          <mat-form-field fxFlex="16" floatLabel="never" class="orders datepicker is-light">
+            <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate"
+              placeholder="Sampai Tanggal" formControlName="end_date" readonly>
             <button mat-button *ngIf="formFilter.get('end_date').value" matSuffix mat-icon-button aria-label="Clear"
               (click)="formFilter.get('end_date').setValue('')">
               <mat-icon>close</mat-icon>
@@ -48,15 +52,23 @@
             </mat-datepicker-toggle>
             <mat-datepicker #sampai></mat-datepicker>
           </mat-form-field>
+          <div fxFlex="1"></div>
+          <mat-form-field fxFlex="16" class="orders dropdown">
+            <mat-select formControlName="status">
+              <mat-option [value]="item.value" *ngFor="let item of listStatuses">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <div fxFlex="1"></div>
           <div class="button-row pb-16">
             <button mat-raised-button style="width: 150px" color="primary" (click)="updateFilter()">FILTER</button>
           </div>
         </div>
       </form>
-      <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows" [loadingIndicator]="loadingIndicator"
-        [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56" [rowHeight]="auto" [offset]="offsetPagination"
-        [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
-        [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
+      <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
+        [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
+        [rowHeight]="auto" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
+        [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
+        (sort)="onSort($event)">
 
         <!-- <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
           <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
@@ -71,11 +83,13 @@
 
         <ngx-datatable-column [sortable]="false" name="Nama" prop="scheduler_name" [flexGrow]="3">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">{{row.scheduler_name}}</span>
+            <span class="row-name"
+              [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">{{row.scheduler_name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [sortable]="false" name="Trade Program" prop="creator_name" [flexGrow]="3"></ngx-datatable-column>
+        <ngx-datatable-column [sortable]="false" name="Trade Program" prop="creator_name" [flexGrow]="3">
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="200" [sortable]="false" name="Periode" prop="start_date" [flexGrow]="3">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
@@ -83,18 +97,22 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [sortable]="false" name="Audience / Grup" prop="audience_name" [flexGrow]="3"></ngx-datatable-column>
+        <ngx-datatable-column [sortable]="false" name="Audience / Grup" prop="audience_name" [flexGrow]="3">
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="85" [sortable]="false" name="Status" prop="status_scheduler" [flexGrow]="3">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
-              <p class="status text-truncate h6 p-4 status-order mat-green-800-bg" style="text-transform: uppercase;" *ngIf="row.status_scheduler == 'publish'">
+              <p class="status text-truncate h6 p-4 status-order mat-green-800-bg" style="text-transform: uppercase;"
+                *ngIf="row.status_scheduler == 'publish'">
                 {{row.status_scheduler}}
               </p>
-              <p class="status text-truncate h6 p-4 status-order mat-yellow-900-bg" style="text-transform: uppercase;" *ngIf="row.status_scheduler == 'draft'">
+              <p class="status text-truncate h6 p-4 status-order mat-yellow-900-bg" style="text-transform: uppercase;"
+                *ngIf="row.status_scheduler == 'draft'">
                 {{row.status_scheduler}}
               </p>
-              <p class="status text-truncate h6 p-4 status-order mat-red-900-bg" style="text-transform: uppercase;" *ngIf="row.status_scheduler == 'unpublish'">
+              <p class="status text-truncate h6 p-4 status-order mat-red-900-bg" style="text-transform: uppercase;"
+                *ngIf="row.status_scheduler == 'unpublish'">
                 {{row.status_scheduler}}
               </p>
             </div>
@@ -104,18 +122,22 @@
         <ngx-datatable-column [width]="155" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px">
-              <button type="button" mat-icon-button color="" matTooltip="Lihat" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">
+              <button type="button" mat-icon-button color="" matTooltip="Lihat"
+                [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">
                 <mat-icon class="secondary-text">assignment</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" [routerLink]="['/dte', 'schedule-trade-program', 'edit', row.id]" [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
+              <button type="button" mat-icon-button color=""
+                [routerLink]="['/dte', 'schedule-trade-program', 'edit', row.id]"
+                [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
                 <mat-icon class="secondary-text">update</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" [disabled]="row.status_audience !== 'approved'" matTooltip="Eksport Trade Program"
-                (click)="export(row)">
+              <button type="button" mat-icon-button color="" [disabled]="row.status_audience !== 'approved'"
+                matTooltip="Eksport Trade Program" (click)="export(row)">
                 <mat-icon *ngIf="row.status_audience === 'approved'" class="orange-500-fg">save_alt</mat-icon>
                 <mat-icon *ngIf="row.status_audience !== 'approved'" class="secondary-text">save_alt</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="primary" [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
+              <button type="button" mat-icon-button color="primary"
+                [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
                 (click)="deleteStp(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
