fix: add note #2

--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -50,7 +50,7 @@
                 <tbody>
                   <tr>
                     <td class="pt-0 w-500">
-                      <p style="max-width: 500px; text-align: justify;">{{detailOrder.note ? detailOrder.note : '-'}}
+                      <p style="max-width: 500px; text-align: justify;">{{detailOrder.address}}</p>
                     </td>
                   </tr>
                 </tbody>
@@ -66,7 +66,7 @@
                 <tbody>
                   <tr>
                     <td class="pt-0 w-500">
-                      <p style="max-width: 500px; text-align: justify;">{{detailOrder.note}}</p>
+                      <p style="max-width: 500px; text-align: justify;">{{detailOrder.note ? detailOrder.note : '-'}}
                     </td>
                   </tr>
                 </tbody>
