--- a/src/app/pages/pay-later/pay-later-panel/create/pay-later-panel-create.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/create/pay-later-panel-create.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat Panel Bayar Nanti'">
+  <page-content-header [contentTitle]="'Buat Panel Pojok Modal'">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
