--- a/src/app/pages/pay-later/pay-later-panel/index/pay-later-panel.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/index/pay-later-panel.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Panel Bayar Nanti'">
+  <page-content-header [contentTitle]="'Panel Pojok Modal'">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/paylater', 'panel', 'create']">
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Panel Bayar Nanti</h2>
+        <h2 class="pl-8">Panel Pojok Modal</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
