fix: paylater #1 - issue get panel SRC

--- a/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-src-edit/pay-later-panel-src-edit.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-src-edit/pay-later-panel-src-edit.component.html
@@ -1,9 +1,9 @@
 <div class="content p-24">
   <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
-    <form autocomplete="off" [formGroup]="formPanelSrc">
+    <form autocomplete="off">
       <div class="ayo-middle" fxLayout="row" style="margin-top: 25px;">
         <div fxLayout="row wrap" fxLayoutAlign="start" fxFlex="89">
-          <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
+          <!-- <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
             <mat-select placeholder="Pilih Perusahaan" formControlName="company">
               <mat-option *ngFor="let cr of listCompanies" [value]="cr.id">{{ cr.name }}</mat-option>
             </mat-select>
@@ -16,7 +16,7 @@
             <button mat-raised-button type="button" class="confirmation-button" fxFlex="100" (click)="aturPanelMitra()">
               ATUR PANEL SRC
             </button>
-          </div>
+          </div> -->
         </div>
         <div fxLayout="column" fxLayoutAlign="flex-end flex-end" fxFlex="10">
           <small>SRC Terpilih</small>
