--- a/src/app/pages/pay-later/pay-later-panel/create/pay-later-panel-src/pay-later-panel-src.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/create/pay-later-panel-src/pay-later-panel-src.component.html
@@ -1,6 +1,6 @@
 <div class="content p-24">
   <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
-    <form autocomplete="off" [formGroup]="formPanelSrc">
+    <form autocomplete="off">
       <div class="ayo-middle" fxLayout="row" style="margin-top: 25px;">
         <div fxLayout="row wrap" fxLayoutAlign="start" fxFlex="89">
           <!-- <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
