--- a/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-edit.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-edit.component.html
@@ -7,10 +7,10 @@
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
       <mat-tab-group [selectedIndex]="selectedTab" (selectedTabChange)="setSelectedTab($event)">
         <mat-tab label="Mitra">
-          <app-pay-later-panel-mitra-edit *ngIf="selectedTab === 0"></app-pay-later-panel-mitra-edit>
+          <app-pay-later-panel-mitra-edit *ngIf="selectedTab === 0" (onRowsSelected)="onRowsSelected($event)"></app-pay-later-panel-mitra-edit>
         </mat-tab>
         <mat-tab label="SRC">
-          <app-pay-later-panel-src-edit *ngIf="selectedTab === 1"></app-pay-later-panel-src-edit>
+          <app-pay-later-panel-src-edit *ngIf="selectedTab === 1" [data]="mitraSelected"></app-pay-later-panel-src-edit>
         </mat-tab>
       </mat-tab-group>
     </div>
