fix: paylater #2 - filter list selected to top - select all issue

--- a/src/app/pages/pay-later/pay-later-panel/create/pay-later-panel-mitra/pay-later-panel-mitra.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/create/pay-later-panel-mitra/pay-later-panel-mitra.component.html
@@ -1,5 +1,5 @@
 <div class="content p-24">
-  <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
+  <div class="mat-white-bg" fxLayout="column">
     <form autocomplete="off" [formGroup]="formPanelMitra">
       <div class="ayo-middle" fxLayout="row" style="margin-top: 25px;">
         <div fxLayout="row wrap" fxLayoutAlign="start" fxFlex="89">
