fix: paylater #3 - remove (delete button) daftar perusahaan

--- a/src/app/pages/pay-later/pay-later-company/index/pay-later-company.component.html
+++ b/src/app/pages/pay-later/pay-later-company/index/pay-later-company.component.html
@@ -77,9 +77,9 @@
               <button mat-icon-button color="" matTooltip="Ubah Perusahaan" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary" (click)="deleteCompany(row.id)">
+              <!-- <button mat-icon-button color="primary" (click)="deleteCompany(row.id)">
                 <mat-icon>delete</mat-icon>
-              </button>
+              </button> -->
             </div>
           </ng-template>
         </ngx-datatable-column>
