--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -160,7 +160,7 @@
                         </mat-form-field>
                       </div>
                     </td>
-                    <td *ngIf="editable">
+                    <td *ngIf="false">
                       <div class="button-row" align="center">
                         <button mat-icon-button *ngIf="!product.get('editable').value" (click)="updateQty(i)">
                           <mat-icon>edit</mat-icon>
@@ -177,7 +177,7 @@
               </table>
               <div class="button-row pt-64" fxLayout="row" *ngIf="editable">
                 <button mat-raised-button [disabled]="!edited || loadingIndicator" color="primary" fxFlex="20"
-                  (click)="saveUpdateQty()">
+                  (click)="saveUpdateQtyV2()">
                   SIMPAN
                 </button>
                 <button mat-raised-button *ngIf="showRedBG(detailOrder.status) && isAnyUpdate > -1" fxFlex="20"
