--- a/src/app/pages/user-management/private-label/panel-mitra/edit/panel-mitra-edit.component.html
+++ b/src/app/pages/user-management/private-label/panel-mitra/edit/panel-mitra-edit.component.html
@@ -41,7 +41,7 @@
                 </mat-error>
               </mat-form-field>
               <div class="button-row">
-                <button mat-raised-button style="width: 160px" color="primary" (click)="aturPanelMitra()" *ngIf="actionType === 'edit'">ATUR PANEL MITRA</button>
+                <button mat-raised-button style="width: 160px" color="primary" (click)="aturPanelMitra()">ATUR PANEL MITRA</button>
               </div>
             </div>
           </form>
@@ -53,8 +53,7 @@
       </div>
       <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
         <div class="button-row">
-          <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()"
-          *ngIf="actionType === 'edit'"><mat-icon>vertical_align_bottom</mat-icon> Import XLS</button>
+          <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()"><mat-icon>vertical_align_bottom</mat-icon> Import XLS</button>
         </div>
         <div class="button-row">
           <button mat-flat-button style="width: 160px" color="white" (click)="exportMitra()"><mat-icon>vertical_align_top</mat-icon> Export XLS</button>
@@ -183,7 +182,7 @@
         </ngx-datatable-column> -->
       </ngx-datatable>
       <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center">
-        <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20" (click)="onSave()" *ngIf="actionType === 'edit'">
+        <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20" (click)="onSave()">
           SIMPAN
         </button>
       </div>
