fixing min transaction company paylater

--- a/src/app/pages/pay-later/pay-later-company/index/pay-later-company.component.html
+++ b/src/app/pages/pay-later/pay-later-company/index/pay-later-company.component.html
@@ -47,10 +47,10 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Minimum Transaksi" prop="minimum_transaction">
+        <ngx-datatable-column name="Minimum Transaksi" prop="min_transaction">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span *ngIf="row.minimum_transaction">{{row.minimum_transaction| rupiahFormater }}</span>
-            <span *ngIf="!row.minimum_transaction">-</span>
+            <span *ngIf="row.min_transaction">{{row.min_transaction }}</span>
+            <span *ngIf="!row.min_transaction">-</span>
           </ng-template>
         </ngx-datatable-column>
 
